fix: scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
-
-
 @import 'ngx-toastr/toastr';
-body{
-    font-family: "Arvo", serif;
-    color: #000;
-    background-color: #f3f3f3 !important;
-}
+body { margin: 0; font-family: "Montserrat", sans-serif; }
 input:focus{
     box-shadow:  none !important;
     border:  1px solid gray !important;
